[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 36.0
margin_bottom = 104.0

[node name="TIME" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_right = 36.0
margin_bottom = 14.0
text = "%"

[node name="TIME2" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 36.0
margin_bottom = 32.0
text = "42%"

[node name="TIME3" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_top = 36.0
margin_right = 36.0
margin_bottom = 50.0
text = "50%"

[node name="TIME4" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_top = 54.0
margin_right = 36.0
margin_bottom = 68.0
text = "63%"

[node name="TIME5" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_top = 72.0
margin_right = 36.0
margin_bottom = 86.0
text = "90%"

[node name="TIME6" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_top = 90.0
margin_right = 36.0
margin_bottom = 104.0
text = "100%"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 40.0
margin_right = 50.0
margin_bottom = 104.0

[node name="L" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 10.0
margin_bottom = 14.0
text = "L"

[node name="L2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 10.0
margin_bottom = 32.0
text = "--"

[node name="L3" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 10.0
margin_bottom = 50.0
text = "--"

[node name="L4" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 10.0
margin_bottom = 68.0
text = "--"

[node name="L5" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 10.0
margin_bottom = 86.0
text = "--"

[node name="L6" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 10.0
margin_bottom = 104.0
text = "--"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 54.0
margin_right = 64.0
margin_bottom = 104.0

[node name="B" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 10.0
margin_bottom = 14.0
text = "B"

[node name="B2" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 10.0
margin_bottom = 32.0
text = "--"

[node name="B3" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 10.0
margin_bottom = 50.0
text = "--"

[node name="B4" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 54.0
margin_right = 10.0
margin_bottom = 68.0
text = "--"

[node name="B5" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 72.0
margin_right = 10.0
margin_bottom = 86.0
text = "--"

[node name="B6" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 90.0
margin_right = 10.0
margin_bottom = 104.0
text = "--"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="n" type="Label" parent="."]
margin_left = 1.15009
margin_top = 133.252
margin_right = 41.1501
margin_bottom = 202.252
text = "n="

[node name="percent" type="Label" parent="."]
margin_left = -0.307476
margin_top = 147.511
margin_right = 39.6925
margin_bottom = 216.511
text = "%="

[node name="bbm" type="Label" parent="."]
margin_left = -0.307476
margin_top = 170.067
margin_right = 39.6925
margin_bottom = 239.067
text = "bbm="

[node name="leni" type="Label" parent="."]
margin_left = 1.01936
margin_top = 184.663
margin_right = 41.0194
margin_bottom = 253.663
text = "leni="

[node name="bbm_leni" type="Label" parent="."]
margin_left = 1.68278
margin_top = 203.238
margin_right = 41.6828
margin_bottom = 272.238
text = "%="
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
